fixed spacing on mobile view

--- a/css/home.css
+++ b/css/home.css
@@ -421,6 +421,7 @@ form button:hover {
         flex-direction: column;
         align-items: center;
         justify-content: center;
+        gap: 10px;
     }
 
     #opening_container {
